--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </nav>
     <!-- MAIN -->
-    <section>
+    <section id="main">
         <div class="container">
             <div class="contents">
                 <p>Welcome to my world</p>
@@ -47,12 +47,14 @@
         </div>
     </section>
     <!-- ABOUT ME -->
-    <section>
-        <div class="about-btn">
-            <!-- icon -->
-            <p>about me</p>
+    <section id="about-me">
+        <div class="about-container">
+            <div class="about-btn">
+                <!-- icon -->
+                <p><i class="fas fa-address-card"></i>about-me</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, explicabo quae! Adipisci quas nihil, inventore, voluptatibus quis, asperiores quod ad ut sunt ducimus reiciendis aperiam libero repudiandae molestiae atque optio!</p>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, explicabo quae! Adipisci quas nihil, inventore, voluptatibus quis, asperiores quod ad ut sunt ducimus reiciendis aperiam libero repudiandae molestiae atque optio!</p>
     </section>
     <!-- MY WORKS -->
     <section id="work-id">
