finish all responsive

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
             <div class="nav-right">
                 <div class="nav-menu">
-                    <p>Contact me</p>
-                    <p>About me</p>
-                    <p>My Works</p>
+                    <a href="#contact-me">Contact me</a>
+                    <a href="#about-me">About me</a>
+                    
                 </div>
                 
                 <div class="btn">
@@ -37,16 +37,15 @@
     <section id="main">
         <div class="container">
             <div class="contents">
-                <p>Welcome to my world</p>
+                <p class="main-text">Welcome to my world</p>
                 <div class="avatar">
-                    <!-- <img src="" alt=""> -->
                     <div class="circle">
                          <img src="./img/profile-picture.jpg" alt="jaydon arcand">
                     </div>
                 </div>
-                <p class="name">Jaydon</p>
-                <p class="name bold">Arcand</p>
-                <p>Professional Unknown </p>
+                <p class="main_name">Jaydon</p>
+                <p class="main_name bold">Arcand</p>
+                <p class="main-text">Professional Unknown </p>
             </div>
         </div>
     </section>
